# CProjectTemplate

./: .gitignore  CMakeLists.txt  main.c
libraries/: CMakeLists.txt  function.c  function.h
tests/: CMakeLists.txt  test_one.cpp
